# carplate_recognition

./: .gitignore  API_AUDIO.md  README.md  pyproject.toml  run_chatbox.sh  setup_uv.sh  stop_chatbox.sh
realtime_audio_demo/: car_plate_extraction_prompt.md  car_plate_initial_thinking_prompt.md  car_plate_update_prompt.md  config.py  events.py  main.py  session_store.py  sessions.py  system_prompt.md
realtime_audio_demo/routes/: audio.py  pages.py
realtime_audio_demo/services/: audio_processing.py  chatbox_application.py  final_plate.py  interfaces.py  model_gateway.py  output_filter.py  plate_agent.py  prompt_provider.py  qwen.py  speech.py  text_chat.py  turn_taking.py
realtime_audio_demo/utils/: audio.py
static/: chatbox.html  realtime-audio-client.js  recorder-worklet.js
stress_test/: test.py  test_audio_stream_trace.py  test_model_stream.py
