[project]
name = "carplate-recognition-chatbox"
version = "0.1.0"
description = "Standalone /chatbox realtime audio route extracted from qwen3 omni demo."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "silero-vad>=6.2.1",
    "uvicorn[standard]>=0.30.0",
]

[tool.uv]
package = false
